--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Papel de Parede</title>
+    <title>Trabalhando com fundos - parte 1</title>
     <style>
-        body {
-            background-image: url('imagens/wallpaper001.jpg');
+        body{
+            background-image: url("imagens/wallpaper003.jpg");
+            background-position-x: center;
+            background-position-y: center;
+            background-repeat: no-repeat;
         }
+
+        div.quadrado{
+
+            border: 3px solid black;
+            width: 300px;
+            height: 300px;
+            display: inline-block;
+            border-radius: 10px;
+            background-color: lightgray;
+
+        }
+
+        div#q1{
+            background-color: skyblue;
+
+        }
+
+        div#q2{
+            background-image: linear-gradient(to bottom, yellow, blue);
+
+        }
+
+        div#q3{
+            background-image: url("imagens/pattern003.png");
+
+        }
+
+
     </style>
 </head>
 <body>
-    <h1>Papel de parede</h1>
+    <div class="quadrado" id="q1">
+
+    </div>
+    <div class="quadrado" id="q2">
+
+    </div>
+    <div class="quadrado" id="q3">
+
+    </div>
 </body>
 </html>
