--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -11,6 +11,7 @@
             background-color: black; /* sempre bom incluir uma cor, pra ficar bonito enquanto carrega a imagem*/
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
+            background-attachment: fixed; /*isso é da proxima aula hehehehe*/
             background-repeat: no-repeat;
             background-size: cover;
 
@@ -25,9 +26,10 @@
         }
         p, h1{
             font-family: sans-serif;
+            font-
         }
     </style>
-</head>
+</head>ß
 <body>
     <main>
         <h1>Teste de Imagem</h1>
