--- a/desafios/modulo-02/d012/index.html
+++ b/desafios/modulo-02/d012/index.html
@@ -5,33 +5,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 12 Cordel</title>
-    <style>
-        
+    <link rel="stylesheet" type="text/css" href="estilo.css" />
 
-
-
-    </style>
 </head>
 <body>
-    <div>
-        <p>
-            
-        </p>
-    </div>
-    <div>
-
-    </div>
-    <div>
-
-    </div>
-    <div>
-
-    </div>
-    <div>
-
-    </div>
-    <div>
-
-    </div>
+    <header>
+        <h1 class="titulo">Cordel Moderno</h1>
+        <p>Por Milton Duarte</p>
+    </header>
+    <section>
+        <article class="versosescuros">
+            Estou ficando cansado<br/>
+            Da tal tecnologia<br/>
+            Só se fala por e-mail<br/>
+            Mensagem curta e fria<br/>
+            Twitter e Facebook<br/>
+            Antes que eu caduque<br/>
+            Vou dizer tudo em poesia.
+        </article>
+    </section>
+    <section>
+        <article class="versosclaros">
+            Não é mais como era antes<br/>
+            É tudo abreviado<br/>
+            "Você" só tem duas letras<br/>
+            O "O" e o "E" foi riscado<br/>
+            Para declarar o amor<br/>
+            Basta botar uma flor<br/>
+            E um coração desenhado.
+        </article>
+    </section>
+    <section>
+        <article class="versosescuros">
+            Arroba agora não pesa<br/>
+            É parte de um endereço<br/>
+            Ponto final nem se usa<br/>
+            Ou vai até no começo<br/>
+            Agora é .com<br/>
+            Se o saite é muito bom<br/>
+            Ele vale um alto preço.<br/>
+        </article>
+        <article class="versosescuros">
+            Pra piorar a liguagem<br/>
+            O emoticom é um risco<br/>
+            Tem símbolo para tudo<br/>
+            Ponto e vírgula e um asterisco<br/>
+            Um beijo significa<br/>
+            Pra entender como fica<br/>
+            Decifre esse rabisco.<br/>
+        </article>
+    </section>
+    <section>
+        <article class="versosclaros">
+            Tenho saudade das cartas<br/>
+            Escritas com a própria mão<br/>
+            Mandava no mês de Junho<br/>
+            Só chegava no Verão<br/>
+            Mas matava a saudade<br/>
+            Era texto de verdade<br/>
+            Nas linhas do coração.<br/>
+        </article>
+    </section>
+    <section>
+        <article class="versosescuros">
+            Agora, escrevo e envio<br/>
+            Chegando na mesma hora<br/>
+            Mas quando vou prosear<br/>
+            A pessoa foi embora<br/>
+            Abriu outro aplicativo<br/>
+            O mundo ficou cativo<br/>
+            Da tecnologia do agora.<br/>
+        </article>
+        <article class="versosescuros">
+            Felizmente, pra orar<br/>
+            Não precisa de internet<br/>
+            Deus escuta todo mundo<br/>
+            Se quiser, faça esse teste<br/>
+            Dois pontos são dois joelhos<br/>
+            Seus lábios são aparelhos<br/>
+            Deixe que Deus interprete.<br/>
+        </article>
+    </section>
+    <footer>
+        <p>Site criado por Lenildo Leite para o curso de HTML+CSS do Curso em Vídeo</p>
+    </footer>
 </body>
 </html>
