atualizacao de estilos e links desafio 12

--- a/desafios/modulo-02/d012/index.html
+++ b/desafios/modulo-02/d012/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1 class="titulo">Cordel Moderno</h1>
-        <p>Por Milton Duarte</p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
     <section>
         <article class="versosescuros">
@@ -87,7 +87,7 @@
         </article>
     </section>
     <footer>
-        <p>Site criado por Lenildo Leite para o curso de HTML+CSS do Curso em Vídeo</p>
+        <p>Site criado por <a href="">Lenildo Leite</a> para o curso de HTML+CSS do <a href="https://www.cursoemvideo.com" target="_blank">Curso em Vídeo</a></p>
     </footer>
 </body>
 </html>
