--- a/desafios/modulo-02/d012/index.html
+++ b/desafios/modulo-02/d012/index.html
@@ -24,7 +24,7 @@
             Vou dizer tudo em poesia.
         </article>
     </section>
-    <section class="fundo1">
+    <section class="fundo" id="img1">
         <article class="versosclaros">
             Não é mais como era antes<br/>
             É tudo abreviado<br/>
@@ -55,7 +55,7 @@
             Decifre esse rabisco.<br/>
         </article>
     </section>
-    <section class="fundo2">
+    <section class="fundo" id="img2">
         <article class="versosclaros">
             Tenho saudade das cartas<br/>
             Escritas com a própria mão<br/>
